--- a/Server/src/main/resources/application.yml
+++ b/Server/src/main/resources/application.yml
@@ -1,14 +1,19 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/termproject
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: postgres
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     properties:
       hibernate:
         show_sql: true
         format_sql: true
+    open-in-view: false
+
+logging:
+  level:
+    web: DEBUG
